cmake_minimum_required(VERSION 3.20)
project(obsidianmesh LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(obsidianmesh
  src/allocator.cpp
  src/routing.cpp
  src/policy.cpp
  src/security.cpp
  src/resilience.cpp
  src/queue.cpp
  src/statistics.cpp
  src/workflow.cpp
  src/model.cpp
  src/contracts.cpp
  src/config.cpp
  src/concurrency.cpp
  src/events.cpp
  src/telemetry.cpp
)

target_include_directories(obsidianmesh PUBLIC include)

add_executable(obsidianmesh_tests tests/test_main.cpp)
target_link_libraries(obsidianmesh_tests PRIVATE obsidianmesh)

enable_testing()

# Allocator tests
add_test(NAME allocator_capacity COMMAND obsidianmesh_tests allocator_capacity)
add_test(NAME allocator_batch COMMAND obsidianmesh_tests allocator_batch)
add_test(NAME allocator_berth_conflict COMMAND obsidianmesh_tests allocator_berth_conflict)
add_test(NAME allocator_available_slots COMMAND obsidianmesh_tests allocator_available_slots)
add_test(NAME allocator_cost_estimation COMMAND obsidianmesh_tests allocator_cost_estimation)
add_test(NAME allocator_cost_allocation COMMAND obsidianmesh_tests allocator_cost_allocation)
add_test(NAME allocator_turnaround COMMAND obsidianmesh_tests allocator_turnaround)
add_test(NAME allocator_validation COMMAND obsidianmesh_tests allocator_validation)
add_test(NAME allocator_weighted COMMAND obsidianmesh_tests allocator_weighted)
add_test(NAME allocator_berth_utilization COMMAND obsidianmesh_tests allocator_berth_utilization)
add_test(NAME allocator_rounding COMMAND obsidianmesh_tests allocator_rounding)
add_test(NAME allocator_cost_per_unit COMMAND obsidianmesh_tests allocator_cost_per_unit)
add_test(NAME allocator_normalize_urgency COMMAND obsidianmesh_tests allocator_normalize_urgency)
add_test(NAME allocator_priority_score COMMAND obsidianmesh_tests allocator_priority_score)
add_test(NAME allocator_over_capacity COMMAND obsidianmesh_tests allocator_over_capacity)

# Routing tests
add_test(NAME routing_blocked COMMAND obsidianmesh_tests routing_blocked)
add_test(NAME routing_channel_score COMMAND obsidianmesh_tests routing_channel_score)
add_test(NAME routing_transit_time COMMAND obsidianmesh_tests routing_transit_time)
add_test(NAME routing_multi_leg COMMAND obsidianmesh_tests routing_multi_leg)
add_test(NAME routing_table COMMAND obsidianmesh_tests routing_table)
add_test(NAME routing_cost COMMAND obsidianmesh_tests routing_cost)
add_test(NAME routing_weighted_score COMMAND obsidianmesh_tests routing_weighted_score)
add_test(NAME routing_best_route COMMAND obsidianmesh_tests routing_best_route)
add_test(NAME routing_failover COMMAND obsidianmesh_tests routing_failover)
add_test(NAME routing_distance COMMAND obsidianmesh_tests routing_distance)
add_test(NAME routing_normalize_latency COMMAND obsidianmesh_tests routing_normalize_latency)
add_test(NAME routing_fuel_efficiency COMMAND obsidianmesh_tests routing_fuel_efficiency)
add_test(NAME routing_total_fees COMMAND obsidianmesh_tests routing_total_fees)
add_test(NAME routing_knots_conversion COMMAND obsidianmesh_tests routing_knots_conversion)
add_test(NAME routing_penalty COMMAND obsidianmesh_tests routing_penalty)

# Policy tests
add_test(NAME policy_escalation COMMAND obsidianmesh_tests policy_escalation)
add_test(NAME policy_deescalation COMMAND obsidianmesh_tests policy_deescalation)
add_test(NAME policy_engine_lifecycle COMMAND obsidianmesh_tests policy_engine_lifecycle)
add_test(NAME policy_sla COMMAND obsidianmesh_tests policy_sla)
add_test(NAME policy_sla_percentage COMMAND obsidianmesh_tests policy_sla_percentage)
add_test(NAME policy_metadata COMMAND obsidianmesh_tests policy_metadata)
add_test(NAME policy_weight_ordering COMMAND obsidianmesh_tests policy_weight_ordering)
add_test(NAME policy_escalation_threshold COMMAND obsidianmesh_tests policy_escalation_threshold)
add_test(NAME policy_risk_score COMMAND obsidianmesh_tests policy_risk_score)
add_test(NAME policy_grace_period COMMAND obsidianmesh_tests policy_grace_period)
add_test(NAME policy_retries_default COMMAND obsidianmesh_tests policy_retries_default)
add_test(NAME policy_cooldown COMMAND obsidianmesh_tests policy_cooldown)

# Queue tests
add_test(NAME queue_hard_limit COMMAND obsidianmesh_tests queue_hard_limit)
add_test(NAME queue_priority COMMAND obsidianmesh_tests queue_priority)
add_test(NAME queue_drain COMMAND obsidianmesh_tests queue_drain)
add_test(NAME queue_health_check COMMAND obsidianmesh_tests queue_health_check)
add_test(NAME queue_wait_estimation COMMAND obsidianmesh_tests queue_wait_estimation)
add_test(NAME queue_batch_enqueue COMMAND obsidianmesh_tests queue_batch_enqueue)
add_test(NAME queue_priority_boost COMMAND obsidianmesh_tests queue_priority_boost)
add_test(NAME queue_fairness COMMAND obsidianmesh_tests queue_fairness)
add_test(NAME queue_requeue COMMAND obsidianmesh_tests queue_requeue)
add_test(NAME queue_weighted_wait COMMAND obsidianmesh_tests queue_weighted_wait)
add_test(NAME queue_pressure_ratio COMMAND obsidianmesh_tests queue_pressure_ratio)
add_test(NAME queue_drain_pct COMMAND obsidianmesh_tests queue_drain_pct)

# Security tests
add_test(NAME security_signature COMMAND obsidianmesh_tests security_signature)
add_test(NAME security_manifest COMMAND obsidianmesh_tests security_manifest)
add_test(NAME security_path_sanitise COMMAND obsidianmesh_tests security_path_sanitise)
add_test(NAME security_origin COMMAND obsidianmesh_tests security_origin)
add_test(NAME security_token_format COMMAND obsidianmesh_tests security_token_format)
add_test(NAME security_password_strength COMMAND obsidianmesh_tests security_password_strength)
add_test(NAME security_masking COMMAND obsidianmesh_tests security_masking)
add_test(NAME security_hmac COMMAND obsidianmesh_tests security_hmac)
add_test(NAME security_rate_limit_key COMMAND obsidianmesh_tests security_rate_limit_key)
add_test(NAME security_session_expiry COMMAND obsidianmesh_tests security_session_expiry)
add_test(NAME security_header_sanitize COMMAND obsidianmesh_tests security_header_sanitize)
add_test(NAME security_permissions COMMAND obsidianmesh_tests security_permissions)
add_test(NAME security_ip_allowlist COMMAND obsidianmesh_tests security_ip_allowlist)
add_test(NAME security_password_hash COMMAND obsidianmesh_tests security_password_hash)

# Resilience tests
add_test(NAME replay_latest COMMAND obsidianmesh_tests replay_latest)
add_test(NAME replay_convergence COMMAND obsidianmesh_tests replay_convergence)
add_test(NAME resilience_checkpoint COMMAND obsidianmesh_tests resilience_checkpoint)
add_test(NAME resilience_circuit_breaker COMMAND obsidianmesh_tests resilience_circuit_breaker)
add_test(NAME resilience_dedup COMMAND obsidianmesh_tests resilience_dedup)
add_test(NAME resilience_replay_window COMMAND obsidianmesh_tests resilience_replay_window)
add_test(NAME resilience_event_ordering COMMAND obsidianmesh_tests resilience_event_ordering)
add_test(NAME resilience_idempotent COMMAND obsidianmesh_tests resilience_idempotent)
add_test(NAME resilience_compact COMMAND obsidianmesh_tests resilience_compact)
add_test(NAME resilience_retry_backoff COMMAND obsidianmesh_tests resilience_retry_backoff)
add_test(NAME resilience_should_trip COMMAND obsidianmesh_tests resilience_should_trip)
add_test(NAME resilience_jitter COMMAND obsidianmesh_tests resilience_jitter)
add_test(NAME resilience_half_open_calls COMMAND obsidianmesh_tests resilience_half_open_calls)
add_test(NAME resilience_failure_window COMMAND obsidianmesh_tests resilience_failure_window)
add_test(NAME resilience_recovery_rate COMMAND obsidianmesh_tests resilience_recovery_rate)
add_test(NAME resilience_checkpoint_interval COMMAND obsidianmesh_tests resilience_checkpoint_interval)
add_test(NAME resilience_degradation COMMAND obsidianmesh_tests resilience_degradation)
add_test(NAME resilience_bulkhead COMMAND obsidianmesh_tests resilience_bulkhead)
add_test(NAME resilience_state_duration COMMAND obsidianmesh_tests resilience_state_duration)
add_test(NAME resilience_fallback COMMAND obsidianmesh_tests resilience_fallback)
add_test(NAME resilience_cascade COMMAND obsidianmesh_tests resilience_cascade)

# Statistics tests
add_test(NAME percentile_sparse COMMAND obsidianmesh_tests percentile_sparse)
add_test(NAME stats_descriptive COMMAND obsidianmesh_tests stats_descriptive)
add_test(NAME stats_variance COMMAND obsidianmesh_tests stats_variance)
add_test(NAME stats_response_tracker COMMAND obsidianmesh_tests stats_response_tracker)
add_test(NAME stats_moving_average COMMAND obsidianmesh_tests stats_moving_average)
add_test(NAME stats_heatmap COMMAND obsidianmesh_tests stats_heatmap)
add_test(NAME stats_weighted_mean COMMAND obsidianmesh_tests stats_weighted_mean)
add_test(NAME stats_ema COMMAND obsidianmesh_tests stats_ema)
add_test(NAME stats_min_max_normalize COMMAND obsidianmesh_tests stats_min_max_normalize)
add_test(NAME stats_covariance COMMAND obsidianmesh_tests stats_covariance)
add_test(NAME stats_correlation COMMAND obsidianmesh_tests stats_correlation)
add_test(NAME stats_sum_of_squares COMMAND obsidianmesh_tests stats_sum_of_squares)
add_test(NAME stats_iqr COMMAND obsidianmesh_tests stats_iqr)
add_test(NAME stats_rate_of_change COMMAND obsidianmesh_tests stats_rate_of_change)
add_test(NAME stats_z_score COMMAND obsidianmesh_tests stats_z_score)

# Workflow tests
add_test(NAME workflow_graph COMMAND obsidianmesh_tests workflow_graph)
add_test(NAME workflow_shortest_path COMMAND obsidianmesh_tests workflow_shortest_path)
add_test(NAME workflow_engine COMMAND obsidianmesh_tests workflow_engine)
add_test(NAME workflow_terminal COMMAND obsidianmesh_tests workflow_terminal)
add_test(NAME workflow_audit COMMAND obsidianmesh_tests workflow_audit)
add_test(NAME workflow_transition_count COMMAND obsidianmesh_tests workflow_transition_count)
add_test(NAME workflow_time_in_state COMMAND obsidianmesh_tests workflow_time_in_state)
add_test(NAME workflow_parallel_count COMMAND obsidianmesh_tests workflow_parallel_count)
add_test(NAME workflow_state_distribution COMMAND obsidianmesh_tests workflow_state_distribution)
add_test(NAME workflow_bottleneck COMMAND obsidianmesh_tests workflow_bottleneck)
add_test(NAME workflow_completion_pct COMMAND obsidianmesh_tests workflow_completion_pct)
add_test(NAME workflow_cancel_from_any COMMAND obsidianmesh_tests workflow_cancel_from_any)
add_test(NAME workflow_estimated_completion COMMAND obsidianmesh_tests workflow_estimated_completion)
add_test(NAME workflow_state_age COMMAND obsidianmesh_tests workflow_state_age)
add_test(NAME workflow_batch_register COMMAND obsidianmesh_tests workflow_batch_register)
add_test(NAME workflow_valid_path COMMAND obsidianmesh_tests workflow_valid_path)
add_test(NAME workflow_throughput COMMAND obsidianmesh_tests workflow_throughput)
add_test(NAME workflow_chain_length COMMAND obsidianmesh_tests workflow_chain_length)
add_test(NAME workflow_merge_histories COMMAND obsidianmesh_tests workflow_merge_histories)

# Model tests
add_test(NAME model_urgency COMMAND obsidianmesh_tests model_urgency)
add_test(NAME model_vessel_manifest COMMAND obsidianmesh_tests model_vessel_manifest)
add_test(NAME model_batch_creation COMMAND obsidianmesh_tests model_batch_creation)
add_test(NAME model_validation COMMAND obsidianmesh_tests model_validation)
add_test(NAME model_classify_severity COMMAND obsidianmesh_tests model_classify_severity)
add_test(NAME model_severity_label COMMAND obsidianmesh_tests model_severity_label)
add_test(NAME model_weight_class COMMAND obsidianmesh_tests model_weight_class)
add_test(NAME model_crew_estimation COMMAND obsidianmesh_tests model_crew_estimation)
add_test(NAME model_hazmat_surcharge COMMAND obsidianmesh_tests model_hazmat_surcharge)
add_test(NAME model_eta COMMAND obsidianmesh_tests model_eta)

# Contract tests
add_test(NAME contracts_exposed COMMAND obsidianmesh_tests contracts_exposed)
add_test(NAME contracts_service_defs COMMAND obsidianmesh_tests contracts_service_defs)
add_test(NAME contracts_url COMMAND obsidianmesh_tests contracts_url)
add_test(NAME contracts_validation COMMAND obsidianmesh_tests contracts_validation)
add_test(NAME contracts_topo_order COMMAND obsidianmesh_tests contracts_topo_order)
add_test(NAME contracts_health_endpoint COMMAND obsidianmesh_tests contracts_health_endpoint)
add_test(NAME contracts_dependency_depth COMMAND obsidianmesh_tests contracts_dependency_depth)
add_test(NAME contracts_critical_path COMMAND obsidianmesh_tests contracts_critical_path)
add_test(NAME contracts_port_collision COMMAND obsidianmesh_tests contracts_port_collision)
add_test(NAME contracts_summary_format COMMAND obsidianmesh_tests contracts_summary_format)

# Config tests
add_test(NAME config_defaults COMMAND obsidianmesh_tests config_defaults)
add_test(NAME config_validate COMMAND obsidianmesh_tests config_validate)
add_test(NAME config_endpoint_validation COMMAND obsidianmesh_tests config_endpoint_validation)
add_test(NAME config_env_normalization COMMAND obsidianmesh_tests config_env_normalization)
add_test(NAME config_feature_flags COMMAND obsidianmesh_tests config_feature_flags)
add_test(NAME config_priority_ordering COMMAND obsidianmesh_tests config_priority_ordering)

# Concurrency tests
add_test(NAME concurrency_barrier COMMAND obsidianmesh_tests concurrency_barrier)
add_test(NAME concurrency_merge_counts COMMAND obsidianmesh_tests concurrency_merge_counts)
add_test(NAME concurrency_partition COMMAND obsidianmesh_tests concurrency_partition)
add_test(NAME concurrency_atomic_counter COMMAND obsidianmesh_tests concurrency_atomic_counter)
add_test(NAME concurrency_registry COMMAND obsidianmesh_tests concurrency_registry)
add_test(NAME concurrency_fan_out_merge COMMAND obsidianmesh_tests concurrency_fan_out_merge)
add_test(NAME concurrency_cycle_detection COMMAND obsidianmesh_tests concurrency_cycle_detection)
add_test(NAME concurrency_work_stealing COMMAND obsidianmesh_tests concurrency_work_stealing)

# Events tests
add_test(NAME events_time_sorting COMMAND obsidianmesh_tests events_time_sorting)
add_test(NAME events_dedup COMMAND obsidianmesh_tests events_dedup)
add_test(NAME events_time_window COMMAND obsidianmesh_tests events_time_window)
add_test(NAME events_count_by_kind COMMAND obsidianmesh_tests events_count_by_kind)
add_test(NAME events_log_eviction COMMAND obsidianmesh_tests events_log_eviction)
add_test(NAME events_gap_detection COMMAND obsidianmesh_tests events_gap_detection)
add_test(NAME events_batch_by_time COMMAND obsidianmesh_tests events_batch_by_time)
add_test(NAME events_rate COMMAND obsidianmesh_tests events_rate)

# Telemetry tests
add_test(NAME telemetry_error_rate COMMAND obsidianmesh_tests telemetry_error_rate)
add_test(NAME telemetry_latency_bucket COMMAND obsidianmesh_tests telemetry_latency_bucket)
add_test(NAME telemetry_throughput COMMAND obsidianmesh_tests telemetry_throughput)
add_test(NAME telemetry_health_score COMMAND obsidianmesh_tests telemetry_health_score)
add_test(NAME telemetry_threshold_check COMMAND obsidianmesh_tests telemetry_threshold_check)
add_test(NAME telemetry_aggregate COMMAND obsidianmesh_tests telemetry_aggregate)
add_test(NAME telemetry_uptime COMMAND obsidianmesh_tests telemetry_uptime)
add_test(NAME telemetry_alerting COMMAND obsidianmesh_tests telemetry_alerting)

# Integration tests
add_test(NAME flow_integration COMMAND obsidianmesh_tests flow_integration)
add_test(NAME end_to_end_dispatch COMMAND obsidianmesh_tests end_to_end_dispatch)
add_test(NAME config_registry_workflow COMMAND obsidianmesh_tests config_registry_workflow)
add_test(NAME event_driven_workflow COMMAND obsidianmesh_tests event_driven_workflow)
add_test(NAME telemetry_collection_flow COMMAND obsidianmesh_tests telemetry_collection_flow)

# Latent bug tests
add_test(NAME latent_accumulated_utilization COMMAND obsidianmesh_tests latent_accumulated_utilization)
add_test(NAME latent_active_route_count COMMAND obsidianmesh_tests latent_active_route_count)
add_test(NAME latent_transition_key COMMAND obsidianmesh_tests latent_transition_key)
add_test(NAME latent_token_expiry_spread COMMAND obsidianmesh_tests latent_token_expiry_spread)

# Domain logic bug tests
add_test(NAME domain_berth_fee COMMAND obsidianmesh_tests domain_berth_fee)
add_test(NAME domain_sla_breach COMMAND obsidianmesh_tests domain_sla_breach)
add_test(NAME domain_weather_eta COMMAND obsidianmesh_tests domain_weather_eta)
add_test(NAME domain_hazmat_crew COMMAND obsidianmesh_tests domain_hazmat_crew)

# Multi-step bug tests
add_test(NAME multistep_normalize_timestamps COMMAND obsidianmesh_tests multistep_normalize_timestamps)
add_test(NAME multistep_event_bursts COMMAND obsidianmesh_tests multistep_event_bursts)
add_test(NAME multistep_reliability_score COMMAND obsidianmesh_tests multistep_reliability_score)
add_test(NAME multistep_select_reliable COMMAND obsidianmesh_tests multistep_select_reliable)

# State machine bug tests
add_test(NAME statemachine_escalation_cooldown COMMAND obsidianmesh_tests statemachine_escalation_cooldown)
add_test(NAME statemachine_transition_sequence COMMAND obsidianmesh_tests statemachine_transition_sequence)
add_test(NAME statemachine_circuit_breaker_recovery COMMAND obsidianmesh_tests statemachine_circuit_breaker_recovery)

# Concurrency bug tests
add_test(NAME concurrency_safe_counter_overflow COMMAND obsidianmesh_tests concurrency_safe_counter_overflow)
add_test(NAME concurrency_parallel_merge COMMAND obsidianmesh_tests concurrency_parallel_merge)
add_test(NAME concurrency_queue_merge COMMAND obsidianmesh_tests concurrency_queue_merge)
add_test(NAME concurrency_event_trim COMMAND obsidianmesh_tests concurrency_event_trim)

# Integration bug tests
add_test(NAME integration_dispatch_route_score COMMAND obsidianmesh_tests integration_dispatch_route_score)
add_test(NAME integration_policy_queue_limit COMMAND obsidianmesh_tests integration_policy_queue_limit)
add_test(NAME integration_health_composite COMMAND obsidianmesh_tests integration_health_composite)
add_test(NAME integration_checkpoint_replay COMMAND obsidianmesh_tests integration_checkpoint_replay)
add_test(NAME integration_priority_aging COMMAND obsidianmesh_tests integration_priority_aging)
add_test(NAME integration_cascade_depth COMMAND obsidianmesh_tests integration_cascade_depth)

# False-pass detection tests
add_test(NAME resilience_jitter_variance COMMAND obsidianmesh_tests resilience_jitter_variance)
add_test(NAME resilience_retry_with_jitter COMMAND obsidianmesh_tests resilience_retry_with_jitter)
add_test(NAME stats_ema_asymmetric COMMAND obsidianmesh_tests stats_ema_asymmetric)
add_test(NAME telemetry_health_asymmetric COMMAND obsidianmesh_tests telemetry_health_asymmetric)
add_test(NAME stats_normalize_boundary COMMAND obsidianmesh_tests stats_normalize_boundary)
add_test(NAME contracts_depth_transitive COMMAND obsidianmesh_tests contracts_depth_transitive)
add_test(NAME concurrency_fan_out_by_key COMMAND obsidianmesh_tests concurrency_fan_out_by_key)
add_test(NAME events_count_duplicates COMMAND obsidianmesh_tests events_count_duplicates)
add_test(NAME config_endpoint_strict COMMAND obsidianmesh_tests config_endpoint_strict)
add_test(NAME model_vessel_load COMMAND obsidianmesh_tests model_vessel_load)

# Targeted reinforcement tests
add_test(NAME resilience_bulkhead_nonexact COMMAND obsidianmesh_tests resilience_bulkhead_nonexact)
add_test(NAME workflow_batch_invalid_state COMMAND obsidianmesh_tests workflow_batch_invalid_state)
add_test(NAME model_crew_tons_matter COMMAND obsidianmesh_tests model_crew_tons_matter)
add_test(NAME contracts_port_collision_gap COMMAND obsidianmesh_tests contracts_port_collision_gap)
add_test(NAME events_merge_streams_order COMMAND obsidianmesh_tests events_merge_streams_order)
add_test(NAME allocator_weighted_with_zero COMMAND obsidianmesh_tests allocator_weighted_with_zero)
add_test(NAME allocator_berth_util_occupied COMMAND obsidianmesh_tests allocator_berth_util_occupied)
add_test(NAME allocator_round_ceiling COMMAND obsidianmesh_tests allocator_round_ceiling)
add_test(NAME allocator_cost_unit_exact COMMAND obsidianmesh_tests allocator_cost_unit_exact)
add_test(NAME allocator_normalize_urg_exact COMMAND obsidianmesh_tests allocator_normalize_urg_exact)
add_test(NAME routing_best_route_min_lat COMMAND obsidianmesh_tests routing_best_route_min_lat)
add_test(NAME routing_failover_filtered COMMAND obsidianmesh_tests routing_failover_filtered)
add_test(NAME routing_penalty_positive_val COMMAND obsidianmesh_tests routing_penalty_positive_val)
add_test(NAME routing_normalize_lat_exact COMMAND obsidianmesh_tests routing_normalize_lat_exact)
add_test(NAME routing_fuel_eff_correct COMMAND obsidianmesh_tests routing_fuel_eff_correct)
add_test(NAME policy_risk_multiply COMMAND obsidianmesh_tests policy_risk_multiply)
add_test(NAME policy_retries_by_level COMMAND obsidianmesh_tests policy_retries_by_level)
add_test(NAME policy_cooldown_by_levels COMMAND obsidianmesh_tests policy_cooldown_by_levels)
add_test(NAME queue_shed_emergency_ratio COMMAND obsidianmesh_tests queue_shed_emergency_ratio)
add_test(NAME queue_batch_depth_limit COMMAND obsidianmesh_tests queue_batch_depth_limit)
add_test(NAME queue_boost_with_interval COMMAND obsidianmesh_tests queue_boost_with_interval)
add_test(NAME queue_requeue_with_penalty COMMAND obsidianmesh_tests queue_requeue_with_penalty)
add_test(NAME queue_weighted_wait_factor COMMAND obsidianmesh_tests queue_weighted_wait_factor)
add_test(NAME queue_pressure_with_rates COMMAND obsidianmesh_tests queue_pressure_with_rates)
add_test(NAME queue_drain_pct_correct COMMAND obsidianmesh_tests queue_drain_pct_correct)
add_test(NAME security_token_order COMMAND obsidianmesh_tests security_token_order)
add_test(NAME security_mask_first COMMAND obsidianmesh_tests security_mask_first)
add_test(NAME security_rate_key_ip_first COMMAND obsidianmesh_tests security_rate_key_ip_first)
add_test(NAME security_session_ms COMMAND obsidianmesh_tests security_session_ms)
add_test(NAME security_header_cr COMMAND obsidianmesh_tests security_header_cr)
add_test(NAME security_perms_subset COMMAND obsidianmesh_tests security_perms_subset)
add_test(NAME resilience_idempotent_method COMMAND obsidianmesh_tests resilience_idempotent_method)
add_test(NAME resilience_compact_last COMMAND obsidianmesh_tests resilience_compact_last)
add_test(NAME resilience_recovery_correct COMMAND obsidianmesh_tests resilience_recovery_correct)
add_test(NAME resilience_degradation_mult COMMAND obsidianmesh_tests resilience_degradation_mult)
add_test(NAME resilience_fallback_primary COMMAND obsidianmesh_tests resilience_fallback_primary)
add_test(NAME stats_weighted_mean_denom COMMAND obsidianmesh_tests stats_weighted_mean_denom)
add_test(NAME stats_covariance_centered COMMAND obsidianmesh_tests stats_covariance_centered)
add_test(NAME stats_correlation_bivariate COMMAND obsidianmesh_tests stats_correlation_bivariate)
add_test(NAME stats_sum_sq_deviation COMMAND obsidianmesh_tests stats_sum_sq_deviation)
add_test(NAME stats_rate_change_interval COMMAND obsidianmesh_tests stats_rate_change_interval)
add_test(NAME workflow_transition_entity COMMAND obsidianmesh_tests workflow_transition_entity)
add_test(NAME workflow_time_ms_to_hours COMMAND obsidianmesh_tests workflow_time_ms_to_hours)
add_test(NAME workflow_parallel_active COMMAND obsidianmesh_tests workflow_parallel_active)
add_test(NAME workflow_completion_correct COMMAND obsidianmesh_tests workflow_completion_correct)
add_test(NAME workflow_throughput_rate COMMAND obsidianmesh_tests workflow_throughput_rate)
add_test(NAME telemetry_error_ratio COMMAND obsidianmesh_tests telemetry_error_ratio)
add_test(NAME telemetry_throughput_sec COMMAND obsidianmesh_tests telemetry_throughput_sec)
add_test(NAME telemetry_uptime_calc COMMAND obsidianmesh_tests telemetry_uptime_calc)
add_test(NAME telemetry_alert_direction COMMAND obsidianmesh_tests telemetry_alert_direction)
add_test(NAME events_dedup_first COMMAND obsidianmesh_tests events_dedup_first)
add_test(NAME events_window_inclusive COMMAND obsidianmesh_tests events_window_inclusive)
add_test(NAME events_normalize_divisor COMMAND obsidianmesh_tests events_normalize_divisor)

# False-pass tightening tests (round 3)
add_test(NAME routing_score_quality COMMAND obsidianmesh_tests routing_score_quality)
add_test(NAME routing_active_exact COMMAND obsidianmesh_tests routing_active_exact)
add_test(NAME routing_weighted_cost COMMAND obsidianmesh_tests routing_weighted_cost)
add_test(NAME resilience_trip_at_thresh COMMAND obsidianmesh_tests resilience_trip_at_thresh)
add_test(NAME resilience_duration_diff COMMAND obsidianmesh_tests resilience_duration_diff)
add_test(NAME resilience_window_check COMMAND obsidianmesh_tests resilience_window_check)
add_test(NAME resilience_halfopen_scales COMMAND obsidianmesh_tests resilience_halfopen_scales)
add_test(NAME resilience_ckpt_scales COMMAND obsidianmesh_tests resilience_ckpt_scales)
add_test(NAME stats_z_zero_stddev COMMAND obsidianmesh_tests stats_z_zero_stddev)

# Hyper-matrix parametric test (12500 scenarios)
add_test(NAME hyper_matrix COMMAND obsidianmesh_tests hyper_matrix)

# --- CTest Labels by Bug Category ---
# Enables focused testing: ctest -L allocator, ctest -L routing, etc.

set_tests_properties(
  allocator_capacity allocator_batch allocator_berth_conflict allocator_available_slots
  allocator_cost_estimation allocator_cost_allocation allocator_turnaround allocator_validation
  allocator_weighted allocator_berth_utilization allocator_rounding allocator_cost_per_unit
  allocator_normalize_urgency allocator_priority_score allocator_over_capacity
  allocator_weighted_with_zero allocator_berth_util_occupied allocator_round_ceiling
  allocator_cost_unit_exact allocator_normalize_urg_exact
  PROPERTIES LABELS "allocator")

set_tests_properties(
  routing_blocked routing_channel_score routing_transit_time routing_multi_leg routing_table
  routing_cost routing_weighted_score routing_best_route routing_failover routing_distance
  routing_normalize_latency routing_fuel_efficiency routing_total_fees routing_knots_conversion
  routing_penalty routing_best_route_min_lat routing_failover_filtered routing_penalty_positive_val
  routing_normalize_lat_exact routing_fuel_eff_correct routing_score_quality routing_active_exact
  routing_weighted_cost
  PROPERTIES LABELS "routing")

set_tests_properties(
  policy_escalation policy_deescalation policy_engine_lifecycle policy_sla policy_sla_percentage
  policy_metadata policy_weight_ordering policy_escalation_threshold policy_risk_score
  policy_grace_period policy_retries_default policy_cooldown
  policy_risk_multiply policy_retries_by_level policy_cooldown_by_levels
  PROPERTIES LABELS "policy")

set_tests_properties(
  queue_hard_limit queue_priority queue_drain queue_health_check queue_wait_estimation
  queue_batch_enqueue queue_priority_boost queue_fairness queue_requeue queue_weighted_wait
  queue_pressure_ratio queue_drain_pct
  queue_shed_emergency_ratio queue_batch_depth_limit queue_boost_with_interval
  queue_requeue_with_penalty queue_weighted_wait_factor queue_pressure_with_rates
  queue_drain_pct_correct
  PROPERTIES LABELS "queue")

set_tests_properties(
  security_signature security_manifest security_path_sanitise security_origin
  security_token_format security_password_strength security_masking security_hmac
  security_rate_limit_key security_session_expiry security_header_sanitize security_permissions
  security_ip_allowlist security_password_hash
  security_token_order security_mask_first security_rate_key_ip_first security_session_ms
  security_header_cr security_perms_subset
  PROPERTIES LABELS "security")

set_tests_properties(
  replay_latest replay_convergence resilience_checkpoint resilience_circuit_breaker
  resilience_dedup resilience_replay_window resilience_event_ordering resilience_idempotent
  resilience_compact resilience_retry_backoff resilience_should_trip resilience_jitter
  resilience_half_open_calls resilience_failure_window resilience_recovery_rate
  resilience_checkpoint_interval resilience_degradation resilience_bulkhead
  resilience_state_duration resilience_fallback resilience_cascade
  resilience_jitter_variance resilience_retry_with_jitter resilience_bulkhead_nonexact
  resilience_idempotent_method resilience_compact_last resilience_recovery_correct
  resilience_degradation_mult resilience_fallback_primary
  resilience_trip_at_thresh resilience_duration_diff resilience_window_check
  resilience_halfopen_scales resilience_ckpt_scales
  PROPERTIES LABELS "resilience")

set_tests_properties(
  percentile_sparse stats_descriptive stats_variance stats_response_tracker stats_moving_average
  stats_heatmap stats_weighted_mean stats_ema stats_min_max_normalize stats_covariance
  stats_correlation stats_sum_of_squares stats_iqr stats_rate_of_change stats_z_score
  stats_ema_asymmetric stats_normalize_boundary
  stats_weighted_mean_denom stats_covariance_centered stats_correlation_bivariate
  stats_sum_sq_deviation stats_rate_change_interval stats_z_zero_stddev
  PROPERTIES LABELS "statistics")

set_tests_properties(
  workflow_graph workflow_shortest_path workflow_engine workflow_terminal workflow_audit
  workflow_transition_count workflow_time_in_state workflow_parallel_count
  workflow_state_distribution workflow_bottleneck workflow_completion_pct
  workflow_cancel_from_any workflow_estimated_completion workflow_state_age
  workflow_batch_register workflow_valid_path workflow_throughput workflow_chain_length
  workflow_merge_histories workflow_batch_invalid_state
  workflow_transition_entity workflow_time_ms_to_hours workflow_parallel_active
  workflow_completion_correct workflow_throughput_rate
  PROPERTIES LABELS "workflow")

set_tests_properties(
  model_urgency model_vessel_manifest model_batch_creation model_validation
  model_classify_severity model_severity_label model_weight_class model_crew_estimation
  model_hazmat_surcharge model_eta model_vessel_load model_crew_tons_matter
  PROPERTIES LABELS "model")

set_tests_properties(
  contracts_exposed contracts_service_defs contracts_url contracts_validation
  contracts_topo_order contracts_health_endpoint contracts_dependency_depth
  contracts_critical_path contracts_port_collision contracts_summary_format
  contracts_depth_transitive contracts_port_collision_gap
  PROPERTIES LABELS "contracts")

set_tests_properties(
  config_defaults config_validate config_endpoint_validation config_env_normalization
  config_feature_flags config_priority_ordering config_endpoint_strict
  PROPERTIES LABELS "config")

set_tests_properties(
  concurrency_barrier concurrency_merge_counts concurrency_partition
  concurrency_atomic_counter concurrency_registry concurrency_fan_out_merge
  concurrency_cycle_detection concurrency_work_stealing concurrency_fan_out_by_key
  concurrency_safe_counter_overflow concurrency_parallel_merge concurrency_queue_merge
  concurrency_event_trim
  PROPERTIES LABELS "concurrency")

set_tests_properties(
  events_time_sorting events_dedup events_time_window events_count_by_kind
  events_log_eviction events_gap_detection events_batch_by_time events_rate
  events_count_duplicates events_merge_streams_order events_dedup_first
  events_window_inclusive events_normalize_divisor
  PROPERTIES LABELS "events")

set_tests_properties(
  telemetry_error_rate telemetry_latency_bucket telemetry_throughput telemetry_health_score
  telemetry_threshold_check telemetry_aggregate telemetry_uptime telemetry_alerting
  telemetry_health_asymmetric telemetry_collection_flow
  telemetry_error_ratio telemetry_throughput_sec telemetry_uptime_calc telemetry_alert_direction
  PROPERTIES LABELS "telemetry")

set_tests_properties(
  flow_integration end_to_end_dispatch config_registry_workflow event_driven_workflow
  latent_accumulated_utilization latent_active_route_count latent_transition_key
  latent_token_expiry_spread domain_berth_fee domain_sla_breach domain_weather_eta
  domain_hazmat_crew multistep_normalize_timestamps multistep_event_bursts
  multistep_reliability_score multistep_select_reliable
  statemachine_escalation_cooldown statemachine_transition_sequence
  statemachine_circuit_breaker_recovery
  integration_dispatch_route_score integration_policy_queue_limit integration_health_composite
  integration_checkpoint_replay integration_priority_aging integration_cascade_depth
  PROPERTIES LABELS "integration")
